--- a/src/styles/stylesBg3.css
+++ b/src/styles/stylesBg3.css
@@ -102,5 +102,10 @@
 .chosenAppBg3 .leaderBoardInfo__player {
   border-color: #5d397f;
 }
+@media (orientation: portrait) {
+  .chosenAppBg3 .shop__cart__buy-button {
+    background-color: #47196C;
+  }
+}
 
 /*# sourceMappingURL=stylesBg3.css.map */
