add whyBadWord, add new levels

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2297,5 +2297,9 @@ b {
     padding-bottom: 150px;
   }
 }
+.whyBadWord {
+  height: auto;
+  font-size: 2rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
