--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1564,7 +1564,6 @@ html,body
   }
 }
 
-/*Реклама кроссвордов*/
 .levels__loc{
   position: absolute;
   right: 7px;
@@ -1585,6 +1584,8 @@ html,body
   font-size: 1.7rem;
   color: black;
   box-shadow: 0 0 6px rgba(0,0,0,0.2);
+
+  cursor: pointer;
 }
 .levels__loc_big{
   font-size: 1.25rem;
@@ -1612,6 +1613,10 @@ html,body
   //overflow: hidden;
   overflow-y: auto;
   font-size: 2rem;
+  padding-bottom: 2px;
+  display: flex;
+  flex-flow: column nowrap;
+
 }
 
 
@@ -1802,6 +1807,9 @@ b{
 
   border-radius: 10px;
 }
+.chosenBg-3{
+  background-image: url(../assets/settings/bg-3.png);
+}
 .chosenBg-2{
   background-image: url(../assets/settings/bg-2.png);
 }
@@ -1872,7 +1880,7 @@ b{
 
 #definitionIframe{
   width: 100%;
-  height: 100%;
+  flex-grow: 3;
 }
 .closedIframe{
   display: none;
