--- a/src/styles/stylesSpring.scss
+++ b/src/styles/stylesSpring.scss
@@ -6,11 +6,11 @@
   background-image: url(../assets/bgSpring/bgSpring-big.png);
 }
 
-@media (min-width: 1800px) {
-  #app.chosenAppBg-3, .chosenAppBg-3 .game, .chosenAppBg-3 .levels{
-    background-image: url(../assets/bgSpring/bgSpring-big.png);
-  }
-}
+//@media (min-width: 1800px) {
+//  #app.chosenAppBg-3, .chosenAppBg-3 .game, .chosenAppBg-3 .levels{
+//    background-image: url(../assets/bgSpring/bgSpring-big.png);
+//  }
+//}
 
 .chosenAppBg-3{
   .levelsTop__allStars{
@@ -72,9 +72,10 @@
     background-color: #9499ff;
   }
   .animWord .words__letter{
-    animation: 1s showNewWord5 forwards;
+    animation: 1s showNewWord6 forwards;
   }
-  @keyframes  showNewWord5{
+  //Смена названия
+  @keyframes  showNewWord6{
     0%{background-color: rgba(255, 255, 255, 0.85);}
     100%{background-color: #9499ff;}
   }
