--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2384,5 +2384,31 @@ b {
     font-size: 18px;
   }
 }
+@media (min-height: 750px) and (orientation: landscape) {
+  .bannerForVertical {
+    height: 150px;
+    flex: 0 0 150px;
+  }
+
+  .lbInGame__player {
+    width: 75px;
+    height: 75px;
+    margin-top: 37.5px;
+  }
+
+  .lbInGame__score {
+    font-size: 18px;
+  }
+
+  .lbInGame .leaderBoardInfo_my {
+    width: 90px;
+    height: 90px;
+    margin-top: 27.5px;
+  }
+
+  .lbInGame .leaderBoardInfo_my .lbInGame__score {
+    font-size: 21px;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
