--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2410,5 +2410,19 @@ b {
     font-size: 21px;
   }
 }
+@media (min-width: 1000px) {
+  .pageNumInfo {
+    width: 500px;
+  }
+}
+.pageNumInput {
+  width: 100%;
+  margin: 5px 0;
+}
+
+.pageNumVal {
+  text-align: center;
+  font-size: 2.5rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
